--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -2310,6 +2310,620 @@ footer {
     }
 }
 
+@media (max-width: 560px) {
+    main {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(135, 68px);
+        padding: 30px;
+        background-color: #f5f5f5;
+    }
+    
+    header {
+        background-image: url(/diagram-library/image/diagram-library.png);
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 254px;
+        position: absolute;
+        border: 1px solid #ffffff;
+        box-sizing: border-box;
+    }
+    
+    .back {
+        background-color: rgba(0, 0, 0, 0.58);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 4px;
+        left: 3px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        font-size: 22px;
+        line-height: 29px;
+        font-weight: normal;
+        letter-spacing: -0.4px;
+        margin: 0px;
+        position: relative;
+        top: -40px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.3px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        position: relative;
+        top: 20px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 6 / 7;
+        color: #acacac;
+        position: relative;
+        top: 20px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 6 / 7;
+        color: #000000;
+        position: relative;
+        top: 20px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 4px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 8 / 14;
+        position: relative;
+        top: -20px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 7px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 14 / 15;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        line-height: 13px;
+        align-self: end;
+        position: relative;
+        top: -20px;
+    }
+    
+    .link {
+        font-size: 13px;
+        line-height: 13px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 12px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 15 / 16;
+        position: relative;
+        top: -40px;
+    }
+    
+    .section-title {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 3;
+        grid-row: 16 / 17;
+        position: relative;
+        top: -40px;
+    }
+    
+    .diagrams-for-bocomm {
+        grid-column: 1 / 3;
+        grid-row: 16 / 26;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: 40px;
+    }
+    
+    .diagram-background {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+    
+    .bank-of-communications-1 {
+        max-width: 290px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .bank-of-communications-2 {
+        margin-top: 24px;
+        max-width: 290px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .image-description {
+        margin-top: 7px;
+        font-size: 12px;
+        line-height: 12px;
+        color: #8e9aa9;
+        text-align: center;
+        font-family: "Inter";
+    }
+    
+    .sample-1 {
+        grid-column: 1 / 3;
+        grid-row: 27 / 28;
+        justify-self: left;
+        width: 100%;
+        position: relative;
+        top: -25px;
+    }
+    
+    .paragraph-title {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .fp-1 {
+        margin-top: 6px;
+    }
+    
+    .sample-2 {
+        grid-column: 1 / 3;
+        grid-row: 36 / 37;
+        width: 100%;
+        position: relative;
+        top: -15px;
+    }
+    
+    .fp-2 {
+        margin-top: 6px;
+    }
+    
+    .diagram-for-mark-fairwhale {
+        grid-column: 1 / 3;
+        grid-row: 29 / 36;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: -30px;
+    }
+    
+    .mark-fairwhale {
+        max-width: 290px;
+        width: 100%;
+    }
+    
+    .diagram-for-yellow-river {
+        grid-column: 1 / 3;
+        grid-row: 38 / 45;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .yellow-river {
+        max-width: 290px;
+        width: 100%;
+    }
+    
+    .sample-3 {
+        grid-column: 1 / 3;
+        grid-row: 45 / 46;
+        justify-self: left;
+        width: 100%;
+        position: relative;
+        top: -5px;
+    }
+    
+    .fp-3 {
+        margin-top: 6px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 47 / 48;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 48 / 49;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 49 / 50;
+    }
+    
+    .subtitle {
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.5px;
+        margin-top: 4px;
+    }
+    
+    .fp-4 {
+        grid-column: 1 / 3;
+        grid-row: 50 / 52;
+        position: relative;
+        top: 0px;
+    }
+    
+    .typical-architecture-diagram {
+        grid-column: 1 / 3;
+        grid-row: 52 / 56;
+        align-self: center;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: 0px;
+        justify-self: left;
+    }
+    
+    .initial-goals {
+        grid-column: 1 / 3;
+        grid-row: 56 / 57;
+        width: 100%;
+        position: relative;
+        top: -15px;
+    }
+    
+    .goal-list {
+        grid-column: 1 / 3;
+        grid-row: 57 / 59;
+        margin: 0px;
+        position: relative;
+        width: 95%;
+        top: 15px;
+        left: -15px;
+    }
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 3px;
+    }
+    
+    .fp-ig {
+        margin-top: 6px;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 60 / 61;
+        position: relative;
+        top: 10px;
+        min-width: 0px;
+    }
+    
+    .fp-5 {
+        grid-column: 1 / 3;
+        grid-row: 61 / 64;
+        position: relative;
+        top: -10px;
+    }
+    
+    .expandable-grid {
+        grid-column: 1 / 3;
+        grid-row: 64 / 68;
+        justify-self: left;
+        width: 100%;
+        max-width: 367px;
+        position: relative;
+        top: -20px;
+    }
+    
+    .pt-5 {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-6 {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        position: relative;
+        top: 30px;
+    }
+    
+    .video-container {
+        grid-column: 1 / 3;
+        grid-row: 70 / 75;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .expandable-grid-video {
+        width: 100%;
+        max-width: 290px;
+    }
+    
+    .process-title-3 {
+        grid-column: 1 / 3;
+        grid-row: 76 / 77;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-7 {
+        grid-column: 1 / 3;
+        grid-row: 77 / 78;
+        position: relative;
+        top: -23px;
+    }
+    
+    .colors {
+        grid-column: 1 / 3;
+        grid-row: 79 / 83;
+        justify-self: left;
+        width: 100%;
+        max-width: 367px;
+        position: relative;
+        top: 10px;
+    }
+    
+    .first-3d-icon-set {
+        grid-column: 1 / 3;
+        grid-row: 83 / 87;
+        justify-self: left;
+        width: 100%;
+        max-width: 367px;
+        position: relative;
+        top: 30px;
+    }
+    
+    .diagrams-for-ecarx {
+        grid-column: 1 / 3;
+        grid-row: 88 / 93;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -27px;
+    }
+    
+    .ecarx {
+        width: 100%;
+        max-width: 330px;
+    }
+    
+    .blender-screenshot {
+        grid-column: 1 / 3;
+        grid-row: 94 / 97;
+        width: 100%;
+        justify-self: left;
+        position: relative;
+        top: -20px;
+        max-width: 367px;
+    }
+    
+    .shift-to-minimalism {
+        grid-column: 1 / 3;
+        grid-row: 97 / 99;
+        position: relative;
+        top: 40px;
+    }
+    
+    .fp-8 {
+        margin-top: 8px;
+    }
+    
+    .variants-image {
+        grid-column: 1 / 3;
+        grid-row: 101 / 107;
+        width: 100%;
+        max-width: 367px;
+        justify-self: left;
+        position: relative;
+        top: 0px;
+    }
+    
+    .figma-panel {
+        grid-column: 1 / 3;
+        grid-row: 108 / 109;
+        justify-self: left;
+        width: 100%;
+        max-width: 367px;
+        position: relative;
+        top: 30px;
+    }
+    
+    .variants {
+        grid-column: 1 / 3;
+        grid-row: 110 / 111;
+        justify-self: left;
+        position: left;
+        left: 0px;
+        width: 100%;
+        position: relative;
+        top: 40px;
+    }
+    
+    .fp-9 {
+        margin-top: 6px;
+    }
+    
+    .software-icons-image {
+        grid-column: 1 / 3;
+        grid-row: 113 / 115;
+        width: 100%;
+        max-width: 367px;
+        position: relative;
+        top: -20px;
+    }
+    
+    .icons-for-software {
+        grid-column: 1 / 3;
+        grid-row: 115 / 116;
+        width: 100%;
+        justify-self: right;
+        position: relative;
+        top: 20px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 3;
+        grid-row: 118 / 119;
+        position: relative;
+        top: -20px;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 3;
+        grid-row: 119 / 120;
+        position: relative;
+        top: -20px;
+    }
+    
+    .diagrams-for-guotai {
+        grid-column: 1 / 3;
+        grid-row: 120 / 130;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .guotai-junan-securities-1 {
+        max-width: 290px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .guotai-junan-securities-2 {
+        margin-top: 24px;
+        max-width: 290px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .diagrams-for-healthcare-industry-solution {
+        grid-column: 1 / 3;
+        grid-row: 130 / 135;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .healthcare-industry-solution {
+        width: 100%;
+        max-width: 290px;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 135 / 136;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
+
 @media (max-width: 395px) {
     main {
         display: grid;
