--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -41,7 +41,9 @@ main {
 
 header {
     background-image: url(/yunify-glyph/image/yunify-glyph.png);
-    background-size: cover;
+    background-color: #ffffff;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
     max-width: 1280px;
     width: 100%;
@@ -98,7 +100,7 @@ h1 {
     letter-spacing: -2.9px;
     margin: 0px;
     position: relative;
-    top: -30px;
+    top: -20px;
 }
 
 .bold-title {
@@ -112,6 +114,8 @@ h1 {
 .s-1 {
     grid-column: 1 / 13;
     grid-row: 7 / 8;
+    position: relative;
+    top: -40px;
 }
 
 .work-info {
@@ -127,12 +131,16 @@ h1 {
     grid-column: 1 / 3;
     grid-row: 8 / 10;
     color: #acacac;
+    position: relative;
+    top: -40px;
 }
 
 .info-content {
     grid-column: 3 / 6;
     grid-row: 8 / 10;
     color: #000000;
+    position: relative;
+    top: -40px;
 }
 
 .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
@@ -142,6 +150,8 @@ h1 {
 .work-description {
     grid-column: 7 / 13;
     grid-row: 8 / 14;
+    position: relative;
+    top: -40px;
 }
 
 .work-description-paragraph:not(:last-child) {
@@ -167,7 +177,7 @@ p {
     line-height: 14px;
     align-self: end;
     position: relative;
-    top: -20px;
+    top: -30px;
 }
 
 .link {
@@ -187,7 +197,7 @@ p {
 
 .s-2 {
     grid-column: 1 / 13;
-    grid-row: 14 / 15;
+    grid-row: 13 / 14;
 }
 
 .section-title {
@@ -201,5 +211,18 @@ p {
 
 .st-1 {
     grid-column: 1 / 3;
-    grid-row: 15 / 16;
+    grid-row: 14 / 15;
+}
+
+.icon-container {
+    grid-column: 1 / 13;
+    grid-row: 16 / 34;
+    background-color: #ffffff;
+    padding: 100px 95px;
+}
+
+.category-name {
+    font-size: 28px;
+    line-height: 28px;
+    letter-spacing: -0.3px;
 }
