--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -39,7 +39,7 @@ main {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(160, 80px);
+    grid-template-rows: repeat(103, 80px);
     max-width: 1120px;
     padding: 80px;
     background-color: #f5f5f5;
@@ -433,4 +433,112 @@ p {
     grid-column: 2 / 12;
     grid-row: 79 / 82;
     width: 100%;
+}
+
+.s-4 {
+    grid-column: 1 / 13;
+    grid-row: 82 / 83;
+}
+
+.st-3 {
+    grid-column: 1 / 3;
+    grid-row: 83 / 84;
+}
+
+.video-container {
+    grid-column: 1 / 13;
+    grid-row: 84 / 92;
+}
+
+.position-box {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container {
+    position: absolute;
+    width: 100%;
+    height: 69.64%;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
+    overflow: hidden;
+    border-radius: 8px;
+    -webkit-transform: translateZ(0);
+}
+
+.appcenter-video {
+    width: 100%;
+}
+
+.s-5 {
+    grid-column: 1 / 13;
+    grid-row: 92 / 93;
+}
+
+.st-4 {
+    grid-column: 1 / 3;
+    grid-row: 93 / 94;
+}
+
+.fp-9 {
+    grid-column: 2 / 12;
+    grid-row: 94 / 95;
+    position: relative;
+    top: -20px;
+}
+
+.owc-1 {
+    grid-column: 1 / 5;
+    grid-row: 95 / 99;
+    background-image: url(/yunify-glyph/image/other-works-1.png);
+}
+
+.owc-2 {
+    grid-column: 5 / 9;
+    grid-row: 95 / 99;
+    background-image: url(/yunify-glyph/image/other-works-2.png);
+}
+
+.owc-3 {
+    grid-column: 9 / 13;
+    grid-row: 95 / 99;
+    background-image: url(/yunify-glyph/image/other-works-3.png);
+}
+
+.owc-4 {
+    grid-column: 1 / 5;
+    grid-row: 99 / 103;
+    background-image: url(/yunify-glyph/image/other-works-4.png);
+}
+
+.owc-5 {
+    grid-column: 5 / 9;
+    grid-row: 99 / 103;
+    background-image: url(/yunify-glyph/image/other-works-5.png);
+}
+
+.owc-6 {
+    grid-column: 9 / 13;
+    grid-row: 99 / 103;
+    background-image: url(/yunify-glyph/image/other-works-6.png);
+}
+
+.other-works-container {
+    background-size: contain;
+    background-color: #000000;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+footer {
+    grid-column: 1 / 13;
+    grid-row: 103 / 104;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0.1px;
+    color: #8d8d8d;
+    border-top: 1px solid #c6c6c6;
+    padding-top: 16px;
+    align-self: end;
 }
