--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -55,12 +55,10 @@ header {
     width: 100%;
     height: 460px;
     position: absolute;
-    border: 1px solid #ffffff;
-    box-sizing: border-box;
 }
 
 .back {
-    background-color: rgba(0, 0, 0, 0.58);
+    background-color: rgba(50, 69, 88, 0.7);
     border-radius: 16px;
     position: relative;
     z-index: 3;
@@ -325,7 +323,11 @@ p {
     grid-row: 53 / 56;
     margin: 0px;
     position: relative;
-    top: 15px;
+    top: 0px;
+}
+
+.pt-1 {
+    margin: 0px;
 }
 
 .goal-list-item:not(:last-child) {
@@ -550,8 +552,8 @@ footer {
     main {
         display: grid;
         gap: 17px;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(150, 80px);
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(112, 80px);
         padding: 70px;
         background-color: #f5f5f5;
     }
@@ -564,10 +566,8 @@ footer {
         background-position: center;
         max-width: 1280px;
         width: 100%;
-        height: 460px;
+        height: 441px;
         position: absolute;
-        border: 1px solid #ffffff;
-        box-sizing: border-box;
     }
     
     .back {
@@ -609,20 +609,20 @@ footer {
     }
     
     h1 {
-        grid-column: 1 / 13;
+        grid-column: 1 / 7;
         grid-row: 5 / 7;
         align-self: center;
-        font-size: 49px;
-        line-height: 59px;
+        font-size: 38px;
+        line-height: 48px;
         font-weight: normal;
-        letter-spacing: -2.9px;
+        letter-spacing: -1.5px;
         margin: 0px;
         position: relative;
-        top: 20px;
+        top: -10px;
     }
     
     .bold-title {
-        letter-spacing: -1.5px;
+        letter-spacing: -1px;
     }
     
     .seperator {
@@ -630,50 +630,50 @@ footer {
     }
     
     .s-1 {
-        grid-column: 1 / 13;
-        grid-row: 7 / 8;
+        grid-column: 1 / 7;
+        grid-row: 6 / 7;
         position: relative;
-        top: -40px;
+        top: 0px;
     }
     
     .work-info {
         list-style-type: none;
         padding: 0px;
         margin: 0px;
-        font-size: 20px;
-        line-height: 30px;
-        letter-spacing: -0.4px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
     }
     
     .info-name {
-        grid-column: 1 / 3;
-        grid-row: 8 / 10;
+        grid-column: 1 / 2;
+        grid-row: 7 / 8;
         color: #acacac;
         position: relative;
-        top: -40px;
+        top: 0px;
     }
     
     .info-content {
-        grid-column: 3 / 6;
-        grid-row: 8 / 10;
+        grid-column: 2 / 4;
+        grid-row: 7 / 8;
         color: #000000;
         position: relative;
-        top: -40px;
+        top: 0px;
     }
     
     .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
     }
     
     .work-description {
-        grid-column: 7 / 13;
-        grid-row: 8 / 14;
+        grid-column: 4 / 7;
+        grid-row: 7 / 12;
         position: relative;
-        top: -40px;
+        top: 0px;
     }
     
     .work-description-paragraph:not(:last-child) {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
     } 
     
     p {
@@ -681,26 +681,26 @@ footer {
     }
     
     .body-text {
-        font-size: 20px;
-        line-height: 30px;
-        letter-spacing: -0.4px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
     }
     
     .quick-link {
-        grid-column: 1 / 3;
-        grid-row: 11 / 13;
+        grid-column: 1 / 2;
+        grid-row: 11 / 12;
         list-style-type: none;
         margin: 0px;
         padding: 0px;
-        line-height: 14px;
+        line-height: 13px;
         align-self: end;
         position: relative;
-        top: -30px;
+        top: 0px;
     }
     
     .link {
-        font-size: 14px;
-        line-height: 14px;
+        font-size: 13px;
+        line-height: 13px;
         color: #166ced;
         text-decoration: none;
     }
@@ -710,18 +710,18 @@ footer {
     }
     
     .quick-link-item:not(:last-child) {
-        margin-bottom: 16px;
+        margin-bottom: 14px;
     }
     
     .s-2 {
-        grid-column: 1 / 13;
+        grid-column: 1 / 7;
         grid-row: 13 / 14;
     }
     
     .section-title {
-        font-size: 20px;
-        line-height: 30px;
-        letter-spacing: -0.4px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
         color: #acacac;
         font-weight: normal;
         margin: 0px;
@@ -733,10 +733,10 @@ footer {
     }
     
     .icon-set-container {
-        grid-column: 1 / 13;
-        grid-row: 15 / 42;
+        grid-column: 1 / 7;
+        grid-row: 15 / 46;
         background-color: #ffffff;
-        padding: 100px 95px;
+        padding: 90px 85px;
     }
     
     .category-name {
@@ -774,7 +774,7 @@ footer {
         justify-items: center;
         row-gap: 60px;
         column-gap: 30px;
-        grid-template-columns: repeat(8, minmax(48px, 1fr));
+        grid-template-columns: repeat(7, minmax(48px, 1fr));
     }
     
     .icon-category:not(:first-child) {
@@ -782,61 +782,73 @@ footer {
     }
     
     .s-3 {
-        grid-column: 1 / 13;
-        grid-row: 42 / 43;
+        grid-column: 1 / 7;
+        grid-row: 46 / 47;
+        position: relative;
+        top: 15px;
     }
     
     .st-2 {
-        grid-column: 1 / 13;
-        grid-row: 43 / 44;
+        grid-column: 1 / 7;
+        grid-row: 47 / 48;
+        position: relative;
+        top: 15px;
     }
     
     .process-title-1 {
-        grid-column: 2 / 12;
-        grid-row: 44 / 45;
+        grid-column: 2 / 6;
+        grid-row: 48 / 49;
+        position: relative;
+        top: 15px;
     }
     
     .subtitle {
-        font-size: 24px;
-        line-height: 24px;
+        font-size: 22px;
+        line-height: 22px;
         letter-spacing: -0.2px;
         margin: 0px;
     }
     
     .process-title-text {
-        font-size: 40px;
-        line-height: 40px;
-        letter-spacing: -1px;
-        margin-top: 15px;
+        font-size: 31px;
+        line-height: 38px;
+        letter-spacing: -0.3px;
+        margin-top: 6px;
     }
     
     .fp-1 {
-        grid-column: 2 / 12;
-        grid-row: 45 / 47;
+        grid-column: 2 / 6;
+        grid-row: 49 / 51;
         margin-top: 0px;
     }
     
     .typical-icon-library {
-        grid-column: 3 / 11;
-        grid-row: 47 / 53;
+        grid-column: 2 / 6;
+        grid-row: 51 / 57;
         width: 100%;
         align-self: center;
+        position: relative;
+        top: 20px;
     }
     
     .initial-goals {
-        grid-column: 2 / 7;
-        grid-row: 53 / 55;
-        width: 90%;
+        grid-column: 2 / 6;
+        grid-row: 57 / 58;
+        width: 100%;
         position: relative;
         top: 0px;
     }
     
     .goal-list {
-        grid-column: 7 / 12;
-        grid-row: 53 / 56;
+        grid-column: 2 / 6;
+        grid-row: 58 / 60;
         margin: 0px;
         position: relative;
-        top: 15px;
+        top: 40px;
+    }
+
+    .pt-1 {
+        margin: 0px;
     }
     
     .goal-list-item:not(:last-child) {
@@ -844,28 +856,34 @@ footer {
     }
     
     .fp-2 {
-        margin-top: 12px;
+        margin-top: 9px;
     }
     
     .process-title-2 {
-        grid-column: 2 / 12;
-        grid-row: 57 / 58;
+        grid-column: 2 / 6;
+        grid-row: 62 / 63;
+        position: relative;
+        top: -20px;
     }
     
     .fp-3 {
-        grid-column: 2 / 12;
-        grid-row: 58 / 59;
+        grid-column: 2 / 6;
+        grid-row: 63 / 64;
+        position: relative;
+        top: -30px;
     }
     
     .image-container {
-        grid-column: 2 / 12;
-        grid-row: 60 / 66;
+        grid-column: 2 / 6;
+        grid-row: 65 / 69;
         background-color: #ffffff;
         display: flex;
         gap: 20px;
         justify-content: center;
         align-items: center;
-        padding: 93px;
+        padding: 60px 32px;
+        position: relative;
+        top: -40px;
     }
     
     .template-image {
@@ -873,47 +891,49 @@ footer {
     }
     
     .process-title-3 {
-        grid-column: 2 / 12;
-        grid-row: 67 / 68;
+        grid-column: 2 / 6;
+        grid-row: 70 / 71;
     }
     
     .fp-4 {
-        grid-column: 2 / 12;
-        grid-row: 68 / 69;
+        grid-column: 2 / 6;
+        grid-row: 71 / 73;
+        position: relative;
+        top: -10px;
     }
     
     .grey-icon {
-        grid-column: 1 / 5;
-        grid-row: 70 / 74;
+        grid-column: 1 / 3;
+        grid-row: 73 / 77;
         width: 100%;
         height: 380px;
         object-fit: contain;
     }
     
     .green-icon {
-        grid-column: 5 / 9;
-        grid-row: 70 / 74;
+        grid-column: 3 / 5;
+        grid-row: 73 / 77;
         width: 100%;
         height: 380px;
         object-fit: contain;
     }
     
     .white-icon {
-        grid-column: 9 / 13;
-        grid-row: 70 / 74;
+        grid-column: 5 / 7;
+        grid-row: 73 / 77;
         width: 100%;
         height: 380px;
         object-fit: contain;
     }
     
     .process-title-4 {
-        grid-column: 2 / 12;
-        grid-row: 75 / 76;
+        grid-column: 2 / 6;
+        grid-row: 78 / 79;
     }
     
     .fp-5 {
-        grid-column: 2 / 12;
-        grid-row: 76 / 79;
+        grid-column: 2 / 6;
+        grid-row: 79 / 82;
     }
     
     .fp-6 {
@@ -921,47 +941,52 @@ footer {
     }
     
     .sizes-image {
-        grid-column: 2 / 12;
-        grid-row: 79 / 82;
+        grid-column: 2 / 6;
+        grid-row: 83 / 85;
         align-self: end;
         width: 100%;
     }
     
     .fp-7 {
-        grid-column: 2 / 12;
-        grid-row: 82 / 83;
+        grid-column: 2 / 6;
+        grid-row: 85 / 86;
     }
     
     .process-title-5 {
-        grid-column: 2 / 12;
-        grid-row: 84 / 85;
+        grid-column: 2 / 6;
+        grid-row: 87 / 88;
     }
     
     .fp-8 {
-        grid-column: 2 / 12;
-        grid-row: 85 / 87;
-        width: 98%;
+        grid-column: 2 / 6;
+        grid-row: 88 / 90;
+        width: 100%;
+        position: relative;
+        top: -15px;
     }
     
     .shapes-image {
-        grid-column: 2 / 12;
-        grid-row: 87 / 90;
+        grid-column: 2 / 6;
+        grid-row: 90 / 93;
         width: 100%;
+        align-self: center;
+        position: relative;
+        top: -20px;
     }
     
     .s-4 {
-        grid-column: 1 / 13;
-        grid-row: 90 / 91;
+        grid-column: 1 / 7;
+        grid-row: 93 / 94;
     }
     
     .st-3 {
-        grid-column: 1 / 3;
-        grid-row: 91 / 92;
+        grid-column: 1 / 2;
+        grid-row: 94 / 95;
     }
     
     .video-container {
-        grid-column: 1 / 13;
-        grid-row: 92 / 100;
+        grid-column: 1 / 7;
+        grid-row: 95 / 102;
     }
     
     .position-box {
@@ -975,9 +1000,9 @@ footer {
         width: 100%;
         height: 69.64%;
         border: 1px solid #ffffff;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
+        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.04), 0px 9px 30px rgba(0, 0, 0, 0.07);
         overflow: hidden;
-        border-radius: 8px;
+        border-radius: 6px;
         -webkit-transform: translateZ(0);
     }
     
@@ -986,55 +1011,55 @@ footer {
     }
     
     .s-5 {
-        grid-column: 1 / 13;
-        grid-row: 100 / 101;
+        grid-column: 1 / 7;
+        grid-row: 102 / 103;
     }
     
     .st-4 {
-        grid-column: 1 / 3;
-        grid-row: 101 / 102;
+        grid-column: 1 / 2;
+        grid-row: 103 / 104;
     }
     
     .fp-9 {
-        grid-column: 2 / 12;
-        grid-row: 102 / 103;
+        grid-column: 2 / 6;
+        grid-row: 104 / 105;
         position: relative;
-        top: -20px;
+        top: 0px;
     }
     
     .owc-1 {
-        grid-column: 1 / 5;
-        grid-row: 103 / 107;
+        grid-column: 1 / 3;
+        grid-row: 106 / 109;
         background-image: url(/yunify-glyph/image/other-works-1.png);
     }
     
     .owc-2 {
-        grid-column: 5 / 9;
-        grid-row: 103 / 107;
+        grid-column: 3 / 5;
+        grid-row: 106 / 109;
         background-image: url(/yunify-glyph/image/other-works-2.png);
     }
     
     .owc-3 {
-        grid-column: 9 / 13;
-        grid-row: 103 / 107;
+        grid-column: 5 / 7;
+        grid-row: 106 / 109;
         background-image: url(/yunify-glyph/image/other-works-3.png);
     }
     
     .owc-4 {
-        grid-column: 1 / 5;
-        grid-row: 107 / 111;
+        grid-column: 1 / 3;
+        grid-row: 109 / 112;
         background-image: url(/yunify-glyph/image/other-works-4.png);
     }
     
     .owc-5 {
-        grid-column: 5 / 9;
-        grid-row: 107 / 111;
+        grid-column: 3 / 5;
+        grid-row: 109 / 112;
         background-image: url(/yunify-glyph/image/other-works-5.png);
     }
     
     .owc-6 {
-        grid-column: 9 / 13;
-        grid-row: 107 / 111;
+        grid-column: 5 / 7;
+        grid-row: 109 / 112;
         background-image: url(/yunify-glyph/image/other-works-6.png);
     }
     
@@ -1046,8 +1071,8 @@ footer {
     }
     
     footer {
-        grid-column: 1 / 13;
-        grid-row: 111 / 112;
+        grid-column: 1 / 7;
+        grid-row: 112 / 113;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
@@ -1055,5 +1080,16 @@ footer {
         border-top: 1px solid #c6c6c6;
         padding-top: 16px;
         align-self: end;
+    }
+}
+
+@media (max-width: 890px) {
+    main {
+        display: grid;
+        gap: 15px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(150, 80px);
+        padding: 60px;
+        background-color: #f5f5f5;
     }
 }
